force-app/main/default/objects/Case/fields/Subcategoria__c.field-meta.xml
<CustomField>
    <fullName>Subcategoria__c</fullName>
    <label>Subcategoría</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Categoria__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>